# pdf2tasks

./: .env.example  .gitignore  AI_Agent_Project_Plan.md  FULL_PIPELINE_EXECUTION_REPORT.md  LLM_PREPROCESSING_COMPARISON_REPORT.md  OPENAPI_IMPLEMENTATION_SUMMARY.md  OPENAPI_INTEGRATION.md  OPENAPI_INTEGRATION_TEST_REPORT.md  PREPROCESSING_MIGRATION_GUIDE.md  README.md  README_CLI.md  README_EXTRACTOR.md  README_IMAGE_ANALYZER.md  README_LLM_CONTEXT_MATCHING.md  README_LLM_PLANNER.md  README_PREPROCESSOR.md  README_REPORTER.md  README_SPLITTER.md  README_TASKWRITER.md  claude.md  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.py  setup.py  test_cli.py  test_extractor.py  test_file_splitter.py  test_image_analyzer.py  test_image_integration.py  test_integration.py  test_llm_context_matching.py  test_llm_planner.py  test_llm_preprocessing.py  test_ocr.py  test_openapi_integration.py  test_preprocessor.py  test_reporter.py  test_task_writer.py
examples/: basic_usage.py  cli_usage.py  file_splitter_usage.py  image_analyzer_usage.py  image_integration_usage.py  llm_planner_usage.py  ocr_usage.py  preprocessor_usage.py  reporter_usage.py  task_writer_usage.py
openapi/: README.md  cms-openapi.json  extern-openapi.json  partner-openapi.json  sample-api.yaml  shop-openapi.json
src/: __init__.py
tasks/: 10_테스트_및_검증.md  1_프로젝트_초기_설정.md  2_PDF_Extractor_구현.md  3_OCR_Engine_구현.md  4_Preprocessor_구현.md  5_LLM_Planner_구현.md  6_LLM_TaskWriter_구현.md  7_FileSplitter_구현.md  8_CLI_및_Orchestrator_구현.md  9_Reporter_구현.md  LLM_OpenAPI_Context_Matching.md
(+72 files in other folders)
